# llm-course-26-app-demo

./: README.md  TEMPLATE.md
.claude/: settings.local.json
.github/workflows/: validate-pr.yml
projects/01-aayush-nair/: project.md
projects/02-aditya-nahush-patel/: project.md
projects/03-aishwarya-mahad-bhanage/: project.md
projects/05-bhavani-shankar-ajith/: project.md
projects/06-conway-zhou/: project.md
projects/07-devshree-hardiksinh-jadeja/: project.md
projects/08-dhruv-rathee/: project.md
projects/09-divyansh-pradhan/: project.md
projects/13-huifang-xiang/: project.md
projects/14-jaya-chandra-dadi/: project.md
projects/15-justin-lee/: project.md
projects/16-krishna-jayesh-mistry/: project.md
projects/17-krupesh-rajendrakumar-desai/: project.md
projects/18-meet-naresh-brahmbhatt/: project.md
projects/19-mohamed-azarudeen/: project.md
projects/20-omkar-rane/: project.md
projects/21-owen-oreilly/: project.md
projects/22-parag-bharatbhai-patel/: project.md
projects/23-parth-chavan/: project.md
projects/24-parth-pidadi/: project.md
projects/25-rutika-avinash-kadam/: project.md
projects/25-rutika-avinash-kadam/src/: README.md  main.py  pyproject.toml
projects/25-rutika-avinash-kadam/src/app/: config.py  extraction.py  prompts.py  rag.py
projects/25-rutika-avinash-kadam/src/app/routes/: chat.py  dictionary.py
projects/25-rutika-avinash-kadam/src/frontend/: App.css  App.tsx
projects/26-sai-ruthvik-madireddy/: project.md
projects/27-saketh-varma-kalidindi/: project.md
scripts/: build_s26_json.py  process_student.py
(+469 files in other folders)
